Updated database and discount examples
